--- a/Views/Customer/Details.cshtml
+++ b/Views/Customer/Details.cshtml
@@ -40,12 +40,12 @@ else
                                 <form asp-action="ReturnBook" method="post" style="margin: 0;">
                                     @Html.AntiForgeryToken()
                                     <input type="hidden" name="bookId" value="@book.BookId" />
-                                    <button type="submit" class="btn btn-warning"><i data-lucide="book-minus"></i> Return</button>
+                                    <button type="submit" class="btn-table-primary purple"><i data-lucide="arrow-up-circle"></i> Return</button>
                                 </form>
                             }
                             else
                             {
-                                <span class="text-muted">N/A</span>
+                                <span style="color: #9ca3af;">N/A</span>
                             }
                         </td>
                     </tr>
