--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using libraryManagement
-@using libraryManagement.Models
+﻿@using LibraryManagement
+@using LibraryManagement.Models
+@using LibraryManagement.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
