--- a/Views/Customer/Details.cshtml
+++ b/Views/Customer/Details.cshtml
@@ -20,9 +20,10 @@ else
             <thead>
                 <tr>
                     <th style="width: 10%;">Book ID</th>
-                    <th style="width: 30%;">Title</th>
-                    <th style="width: 20%;">Author</th>
-                    <th style="width: 25%;">Library Branch</th>
+                    <th style="width: 25%;">Title</th>
+                    <th style="width: 18%;">Author</th>
+                    <th style="width: 18%;">Library Branch</th>
+                    <th style="width: 14%;">Status</th>
                     <th style="width: 15%;">Actions</th>
                 </tr>
             </thead>
@@ -35,12 +36,17 @@ else
                         <td>@book.AuthorName</td>
                         <td>@book.LibraryBranchName</td>
                         <td>
+                            <span class="status-checked-out">
+                                <i data-lucide="clock"></i> Checked out
+                            </span>
+                        </td>
+                        <td>
                             @if (isCurrentUser)
                             {
                                 <form asp-action="ReturnBook" method="post" style="margin: 0;">
                                     @Html.AntiForgeryToken()
                                     <input type="hidden" name="bookId" value="@book.BookId" />
-                                    <button type="submit" class="btn-table-primary purple"><i data-lucide="arrow-up-circle"></i> Return</button>
+                                    <button type="submit" class="btn btn-warning"><i data-lucide="book-minus"></i> Return</button>
                                 </form>
                             }
                             else
