--- a/Views/Book/Index.cshtml
+++ b/Views/Book/Index.cshtml
@@ -88,7 +88,7 @@
                                 <form asp-action="Checkout" method="post" style="display: inline-block;">
                                     @Html.AntiForgeryToken()
                                     <input type="hidden" name="bookId" value="@book.BookId" />
-                                    <button type="submit" class="btn-table-primary green"><i data-lucide="arrow-down-circle"></i> Borrow</button>
+                                    <button type="submit" class="btn btn-blue"><i data-lucide="book-plus"></i> Borrow</button>
                                 </form>
                             }
                             else if (book.CustomerId == currentUserId)
@@ -97,7 +97,7 @@
                                 <form asp-action="ReturnBook" method="post" style="display: inline-block;">
                                     @Html.AntiForgeryToken()
                                     <input type="hidden" name="bookId" value="@book.BookId" />
-                                    <button type="submit" class="btn-table-primary purple"><i data-lucide="arrow-up-circle"></i> Return</button>
+                                    <button type="submit" class="btn btn-warning"><i data-lucide="book-minus"></i> Return</button>
                                 </form>
                             }
                         }
