Refactor all buttons to use _ActionButton component
- Updated _ActionButton to support submit/button types and JS functions
- Converted all Save/Cancel buttons in Create/Edit/Delete pages
- Converted all Back/Add buttons in Index pages
- Converted all navigation buttons in _Layout (My Profile, Logout, Login, Register)
- Converted Author book count and Customer borrowed count buttons
- All buttons now use consistent styling through the component

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -25,7 +25,12 @@
         </label>
     </div>
 
-    <button type="submit" class="btn btn-blue">Login</button>
+    @await Html.PartialAsync("Components/_ActionButton", null, new ViewDataDictionary(ViewData)
+    {
+        { "ButtonType", "submit" },
+        { "Color", "blue" },
+        { "Text", "Login" }
+    })
 </form>
 
 <hr style="margin: 2rem 0;" />
