--- a/Views/Book/Create.cshtml
+++ b/Views/Book/Create.cshtml
@@ -36,6 +36,17 @@
         <span asp-validation-for="LibraryBranchId" class="text-error"></span>
     </div>
 
-    <button type="submit" class="btn btn-blue">Save</button>
-    <a asp-action="Index" class="btn btn-secondary" style="margin-left: 0.5rem;">Cancel</a>
+    @await Html.PartialAsync("Components/_ActionButton", null, new ViewDataDictionary(ViewData)
+    {
+        { "ButtonType", "submit" },
+        { "Color", "blue" },
+        { "Text", "Save" }
+    })
+    @await Html.PartialAsync("Components/_ActionButton", null, new ViewDataDictionary(ViewData)
+    {
+        { "ActionName", "Index" },
+        { "Color", "secondary" },
+        { "Text", "Cancel" },
+        { "Style", "margin-left: 0.5rem;" }
+    })
 </form>
