--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -8,4 +8,10 @@
 <p><strong>Author:</strong> @Model.AuthorName</p>
 <p><strong>Branch:</strong> @Model.LibraryBranchName</p>
 
-<a asp-action="Index" class="btn btn-secondary">⬅ Back to List</a>
+@await Html.PartialAsync("Components/_ActionButton", null, new ViewDataDictionary(ViewData)
+{
+    { "ActionName", "Index" },
+    { "Icon", "arrow-left" },
+    { "Color", "secondary" },
+    { "Text", "Back to List" }
+})
