--- a/Views/Customer/Delete.cshtml
+++ b/Views/Customer/Delete.cshtml
@@ -25,6 +25,18 @@
 <form asp-action="DeleteConfirmed" method="post" style="margin-top: 2rem;">
     <input type="hidden" name="CustomerId" value="@Model.CustomerId" />
 
-    <button type="submit" class="btn btn-danger"><i data-lucide="trash-2"></i> Yes, Delete</button>
-    <a asp-action="Index" class="btn btn-secondary" style="margin-left: 0.5rem;">Cancel</a>
+    @await Html.PartialAsync("Components/_ActionButton", null, new ViewDataDictionary(ViewData)
+    {
+        { "ButtonType", "submit" },
+        { "Color", "danger" },
+        { "Icon", "trash-2" },
+        { "Text", "Yes, Delete" }
+    })
+    @await Html.PartialAsync("Components/_ActionButton", null, new ViewDataDictionary(ViewData)
+    {
+        { "ActionName", "Index" },
+        { "Color", "secondary" },
+        { "Text", "Cancel" },
+        { "Style", "margin-left: 0.5rem;" }
+    })
 </form>
